[gd_scene load_steps=4 format=3 uid="uid://cdc6lfjuxxbia"]

[ext_resource type="Script" path="res://user_interface/player_hud/team_UI_stuff/panel_char.gd" id="1_n0l6s"]
[ext_resource type="Texture2D" uid="uid://ci6hb127q6kmh" path="res://characters/knight/visuals/knight_portrait.tres" id="2_34r3i"]
[ext_resource type="LabelSettings" uid="uid://buthhqor0rds0" path="res://resources/font_settings/font_system_desc.tres" id="3_ele2s"]

[node name="Panel_Char1" type="PanelContainer"]
offset_right = 98.0
offset_bottom = 59.0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
script = ExtResource("1_n0l6s")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer_info" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(74, 0)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 1

[node name="Label_name" type="Label" parent="HBoxContainer/VBoxContainer_info"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "[1] Knight"
label_settings = ExtResource("3_ele2s")

[node name="Label_health" type="Label" parent="HBoxContainer/VBoxContainer_info"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "HP: 50/50"
label_settings = ExtResource("3_ele2s")

[node name="Label_ammo" type="Label" parent="HBoxContainer/VBoxContainer_info"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Ammo: 9/9 "
label_settings = ExtResource("3_ele2s")

[node name="Label_charge" type="Label" parent="HBoxContainer/VBoxContainer_info"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Charge: 0/100"
label_settings = ExtResource("3_ele2s")

[node name="CharPortrait" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
texture = ExtResource("2_34r3i")
stretch_mode = 5
